--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.1.2",
+    "@material-ui/icons": "^3.0.1",
+    "material-ui-community-icons": "^0.15.0",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-background-slideshow": "^1.0.4",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "react-social-icons": "^3.0.0",
+    "react-ui-cards": "^1.4.0",
+    "superagent": "^4.0.0-beta.5"
   },
   "scripts": {
     "start": "react-scripts start",
