--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
     "material-ui-community-icons": "^0.15.0",
+    "mdi-material-ui": "^5.5.0",
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-background-slideshow": "^1.0.4",
