--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
+    "auth0": "^2.13.0",
+    "auth0-js": "^9.8.0",
     "material-ui-community-icons": "^0.15.0",
     "mdi-material-ui": "^5.5.0",
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-background-slideshow": "^1.0.4",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-social-icons": "^3.0.0",
     "react-ui-cards": "^1.4.0",
+    "shorthash": "0.0.2",
     "superagent": "^4.0.0-beta.5"
   },
   "scripts": {
