--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "mdi-material-ui": "^5.5.0",
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-awesome-button": "^5.0.0",
     "react-background-slideshow": "^1.0.4",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-social-icons": "^3.0.0",
     "react-ui-cards": "^1.4.0",
+    "recharts": "^1.4.2",
     "shorthash": "0.0.2",
     "superagent": "^4.0.0-beta.5"
   },
