--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.5.2",
     "react-awesome-button": "^5.0.0",
     "react-background-slideshow": "^1.0.4",
+    "react-device-detect": "^1.6.1",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
