--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "material-ui-community-icons": "^0.15.0",
     "mdi-material-ui": "^5.5.0",
     "moment": "^2.22.2",
+    "rc-slider": "^8.6.4",
+    "rc-tooltip": "^3.7.3",
     "react": "^16.5.2",
     "react-awesome-button": "^5.0.0",
     "react-background-slideshow": "^1.0.4",
@@ -17,6 +19,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
+    "react-select": "^2.2.0",
     "react-social-icons": "^3.0.0",
     "react-ui-cards": "^1.4.0",
     "recharts": "^1.4.2",
